syntax = "proto3";

// 生成多文件，可以将类都生成在一个文件中
option java_multiple_files = false;
// 包名
option java_package = "com.machloop.fpc.cms.grpc";
// 生成的类名
option java_outer_classname = "CentralProto";

package central;

// 定义服务
service GrpcServer {
    
    rpc registerHeartbeat (RequestMessage) returns (ReplyMessage) {} 
  
    rpc sendupChannel (SendupRequest) returns (SendupReply) {}

    rpc assignChannel (stream AssignRequest) returns (stream AssignReply) {}

}

// register and heartbeat
message RequestMessage {
  string message_type = 1;
  RegisterRequest register_request = 2;
  HeartbeatRequest heartbeat_request = 3;
}
message ReplyMessage {
  int32 code = 1;
  string ip = 2;
  string detail = 3;
  string exist = 4;
}
message RegisterRequest {
  string device_type = 1;
  string device_ip = 2;
  string device_name = 3;
  string serial_number = 4;
  string version = 5;
  string sensor_type = 6;
  string cms_token = 7;
  string app_key = 8;
  string app_token = 9;
  int64 timestamp = 10;
}
message HeartbeatRequest {
  string device_type = 1;
  string device_ip = 2;
  string device_name = 3;
  string serial_number = 4;
  string license_state = 5;
  string cms_token = 6;
  string version = 7;
  int64 uptime = 8;
  int64 lastHeartbeat = 9;
  int64 timestamp = 10;
  repeated TaskExecution task_execution = 11;
  repeated DeviceStatus device_status = 12;
}
message TaskExecution {
  string task_id = 1;
  string assign_task_id = 2;
  int64 assign_task_time = 3;
  int32 execution_progress = 4;
  int64 execution_start_time = 5;
  int64 execution_end_time = 6;
  string execution_state = 7;
  string execution_cache_path = 8;
  string execution_download_url = 9;
  string execution_trace = 10;
  string state = 11;
  string fpc_serial_number = 12;
}
message DeviceStatus {
  string device_type = 1;
  string device_ip = 2;
  string device_name = 3;
  string serial_number = 4;
  string version = 5;
  string license_state = 6;
  int64 up_time = 7;
  int64 last_interactive_time = 8;
  int64 last_interactive_latency = 9;
  int64 timestamp = 10;
}

// AssignRequest and AssignResult
message AssignRequest {
  string device_type = 1;
  string serial_number = 2;
  repeated AssignResult result = 3;
  int64 timestamp = 4;
}

message AssignReply {
  string message_type = 1;
  repeated TaskAssignment task_Assignment = 2;
}

message AssignResult {
  int32 code = 1;
  string detail = 2;
  string assignment_task_id = 3;
}
message TaskAssignment {
  string assignment_id = 1;
  string task_id = 2;
  string name = 3;
  string action = 4;
  int64 filter_start_time = 5;
  int64 filter_end_time = 6;
  string filter_network_id = 7;
  string filter_condition_type = 8;
  string filter_tuple = 9;
  string filter_bpf = 10;
  string filter_raw = 11;
  string mode = 12;
  string replay_netif = 13;
  int32 replay_rate = 14;
  string replay_rate_unit = 15;
  string forward_action = 16;
  string description = 17;
  string state = 18;
  int64 timestamp = 19;
  string fpc_serial_number = 20;
}

message SendupRequest {
  string message_id = 1;
  string message_type = 2;
  string device_type = 3;
  string serial_number = 4;
  int64 start_time = 5;
  int64 end_time = 6;
  bool all = 7;
  repeated Entity entity = 8;
  int64 timestamp = 9;
}
message SendupReply {
  int32 code = 1;
  string detail = 2;
  string message_id = 3;
  string message_type = 4;
}

message Entity {
  int64 start_time = 1;
  int64 end_time = 2;
  repeated MetricEntity metric_entity = 3;
  repeated LogEntity Log_entity= 4;
  repeated AlarmEntity alarm_entity = 5;
  repeated NetworkEntity network_entity = 6;
  repeated SensorEntity sensor_entity = 7;
  repeated CmsEntity cms_entity = 8;
}
// 定义上报系统信息消息，请求和应答结构
message MetricEntity {
  int64 fs_data_total_byte = 1;
  int32 fs_data_used_pct = 2;
  int64 fs_cache_total_byte = 3;
  int32 fs_cache_used_pct = 4;
  int64 data_oldest_time = 5;
  int64 data_last24_total_byte = 6;
  int64 data_predict_total_day = 7;
  int64 cache_file_avg_byte = 8;
  int64 fs_store_total_byte = 9;
  int64 fs_system_total_byte = 10;
  int64 fs_index_total_byte = 11;
  int64 fs_metadata_total_byte = 12;
  int64 fs_metadata_hot_total_byte = 13;
  int64 fs_packet_total_byte = 14;
  repeated SystemMetric system_metric = 15;
  repeated NetifMetric netif_metric = 16;
  repeated RaidMonitor raid_monitor = 17;
  repeated DiskMonitor disk_monitor = 18;
  repeated DiskIOMetric disk_io_metric = 19;
  int64 metric_time = 20;
}
message SystemMetric {
  int32 cpu_metric = 1;
  int32 memory_metric = 2;
  int32 system_fs_metric = 3;
  int32 index_fs_metric = 4;
  int32 metadata_fs_metric = 5;
  int32 metadata_hot_fs_metric = 6;
  int32 packet_fs_metric = 7;
  int64 metric_time = 8;
}
message NetifMetric {
  string netif_name = 1;
  string category = 2;
  string state = 3;
  int32 specification = 4;
  int64 rx_bps = 5;
  int64 tx_bps = 6;
  int64 rx_pps = 7;
  int64 tx_pps = 8;
  int64 metric_time = 9;
}
message RaidMonitor {
  string raid_no = 1;
  string raid_level = 2;
  string state = 3;
}
message DiskMonitor {
  string raid_no = 1;
  string raid_level = 2;
  string physical_location = 3;
  string slot_no = 4;
  string medium = 5;
  string capacity = 6;
  string state = 7;
  string foreign_state = 8;
  string rebuild_progress = 9;
  string copyback_progress = 10;
}
message DiskIOMetric {
  string partition_name = 1;
  int64 read_byteps = 2;
  int64 read_byteps_peak = 3;
  int64 write_byteps = 4;
  int64 write_byteps_peak = 5;
  int64 metric_time = 6;
}
// 定义上报日志告警信息消息，请求和应答结构
message LogEntity {
  string id = 1;
  string level = 2;
  string category = 3;
  string component = 4;
  string content = 5;
  string source = 6;
  string node_id = 7;
  int64 arise_time = 8;
}
message AlarmEntity {
  string id = 1;
  string level = 2;
  string category = 3;
  string keyword  = 4;
  string component = 5;
  string solver_id = 6;
  string status = 7;
  string content = 8;
  string reason = 9;
  string node_id = 10;
  int64 arise_time = 11;
  int64 solve_time = 12;
}
message NetworkEntity {
  string id = 1;
  string name = 2;
  int32 bandwidth = 3;
  string fpc_serial_number = 4;
  string action = 5;
}
message SensorEntity {
  string name = 1;
  string ip = 2;
  string serial_number = 3;
  string version = 4;
  string type = 5;
  string app_key = 6;
  string app_token = 7;
  string cms_token = 8;
  string cms_serial_number = 9;
  string action = 10;
}
message CmsEntity {
  string name = 1;
  string ip = 2;
  string serial_number = 3;
  string version = 4;
  string app_key = 5;
  string app_token = 6;
  string cms_token = 7;
  string superior_cms_serial_number = 8;
  string action = 9;
}
